fix: Update height on smaller desktop

--- a/src/components/recent-posts-section/RecentPostsSection.module.css
+++ b/src/components/recent-posts-section/RecentPostsSection.module.css
@@ -59,6 +59,6 @@
         grid-template-columns: 1fr 1fr;
         grid-template-rows: repeat(6, auto);
         place-items: center;
-        height: 1150px;
+        height: 1180px;
     }
 }
